# django-article-management-system

./: .dockerignore  .env.docker  .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  package-lock.json  package.json  pyproject.toml  requirements.txt  start-django.sh  tailwind.config.js
app/: admin.py  manager.py  models.py  urls.py  views.py
app/migrations/: 0001_initial.py  0002_remove_userprofile_username.py  0003_alter_userprofile_managers_remove_article_create_at_and_more.py
djangocourse/: settings.py  urls.py
djangocourse/static/: input.css  output.css
locale/es/LC_MESSAGES/: django.po
static/: input.css  output.css
templates/: base.html
templates/account/: email.html  login.html  signup.html
templates/allauth/elements/: provider.html
templates/app/: app_base.html  article_delete.html  article_update.html  create_articles.html  home.html
templates/app/layouts/: base_form.html
